# school-erp

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  use
.github/workflows/: ci.yml
admin/: page.tsx
app/: middleware.ts  page.tsx
app/admin/: layout.tsx  page.tsx
app/login/: page.tsx
app/student/: page.tsx
app/teacher/: layout.tsx  page.tsx
apps/client/: package.json
apps/server/: .env  package.json
backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 20250630002433_init_tables.sql  20250630023959_init.sql
backend/src/: auth.rs  main.rs  middleware.rs  models.rs  routes.rs
client/: package-lock.json  package.json
client/app/: page.tsx
client/components/: AddExamForm.tsx  AddForm.tsx  IssueList.tsx  NotificationForm.tsx  Sidebar.tsx  SubjectStudents.tsx  TeacherProfile.tsx
client/practical/: script.js
client/prisma/: .env  schema.prisma
client/src/: App.tsx
client/store/: useUserStore.ts
components/: AddExamForm.tsx  AddQuestionModal.tsx  AddStudentModal.tsx  AddTeacherModal.tsx  AddUserModal.tsx  AdminIssuesList.tsx  AssignStudentsModal.tsx  ExamTable.tsx  IssueForm.tsx  NotificationsList.tsx  QuestionEditor.tsx  Sidebar.tsx  TeacherPerformanceSummary.tsx  TodaysTopicsSection.tsx  UserProfileModal.tsx  ViewExamModal.tsx
components/student/: ExamView.tsx  ProfileSection.tsx  SyllabusView.tsx
components/teacher/: AddExamSection.tsx  AddSyllabusSection.tsx  ProfileSection.tsx  StudentScoresPanel.tsx  StudentsSection.tsx  (+1 more)
frontend/: package-lock.json
lib/: pb.ts  pocketbaseApi.ts  supabase.ts
types/: index.tsx
(+41 files in other folders)
